--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "hilton-react-native",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.16",
-    "apollo-client": "^2.4.2",
-    "eslint": "^5.6.0",
-    "expo": "^27.0.1",
-    "graphql": "^14.0.2",
-    "graphql-tag": "^2.9.2",
-    "react": "^16.3.1",
-    "react-apollo": "^2.1.11",
-    "react-dom": "^16.5.2",
-    "react-native": "^0.55.4",
-    "react-native-web": "^0.9.0",
-    "react-navigation": "^2.16.0",
-    "tcomb-form-native": "^0.6.16"
-  }
+    "@react-native-community/masked-view": "0.1.5",
+    "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
+    "expo": "~36.0.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "react": "~16.9.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.2.2",
+    "react-navigation-stack": "^2.2.3",
+    "tcomb-form-native": "^0.6.20"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "~8.0.0"
+  },
+  "private": true
 }
